Update index.html - personal info section added

--- a/index.html
+++ b/index.html
@@ -2,3 +2,24 @@
 <title> assignment no. 03 </title>
 <body> <font-family;"times"> <text-align;"center">
 <h1> FORM <h1>
+  <form>
+    <fieldset>
+      <legend> Personal Information </legend>
+      
+      <label for="fname">First Name:</label><br>
+    <input type="text" id="fname" name="fname" placeholder="First Name"><br><br>
+
+    <label for="lname">Last Name:</label><br>
+    <input type="text" id="lname" name="lname" placeholder="Last Name"><br><br>
+
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" placeholder="Email"><br><br>
+
+    <label for="dob">Date of Birth:</label><br>
+    <input type="date" id="dob" name="dob"><br><br>
+
+    <label for="favcolor">Favorite Color:</label><br>
+    <input type="file" id="favcolor" name="favcolor"><br>
+
+    </fieldset>
+  </form>
