--- a/index.html
+++ b/index.html
@@ -22,4 +22,41 @@
     <input type="file" id="favcolor" name="favcolor"><br>
 
     </fieldset>
+
+     <fieldset>
+    <legend>Preferences</legend>
+
+    <label>Favorite Web Language:</label><br>
+    <input type="radio" id="html" name="favlang" value="HTML">
+    <label for="html">HTML</label>
+    <input type="radio" id="css" name="favlang" value="CSS">
+    <label for="css">CSS</label>
+    <input type="radio" id="js" name="favlang" value="JavaScript">
+    <label for="js">JavaScript</label>
+    <br><br>
+
+    <label>Devices You Own:</label><br>
+    <input type="checkbox" id="bike" name="device1" value="Bike">
+    <label for="bike">Bike</label>
+    <input type="checkbox" id="car" name="device2" value="Car">
+    <label for="car">Car</label>
+    <input type="checkbox" id="boat" name="device3" value="Boat">
+    <label for="boat">Boat</label>
+    <br><br>
+
+    <label for="carselect">Choose Your Car:</label><br>
+    <select id="carselect" name="carselect" size="4">
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="ford">Ford</option>
+      <option value="audi">Audi</option>
+    </select>
+    <br><br>
+
+    <label for="time">Available Time:</label><br>
+    <input type="time" id="time" name="time">
+    <br>
+
+  </fieldset>
+    
   </form>
