--- a/index.html
+++ b/index.html
@@ -4,28 +4,21 @@
 <h1> FORM <h1>
   <form>
     <fieldset>
-      <legend> Personal Information </legend>
-      
-      <label for="fname">First Name:</label><br>
+    <legend> Personal Information </legend>
+    <label for="fname">First Name:</label><br>
     <input type="text" id="fname" name="fname" placeholder="First Name"><br><br>
-
     <label for="lname">Last Name:</label><br>
     <input type="text" id="lname" name="lname" placeholder="Last Name"><br><br>
-
     <label for="email">Email:</label><br>
     <input type="email" id="email" name="email" placeholder="Email"><br><br>
-
     <label for="dob">Date of Birth:</label><br>
     <input type="date" id="dob" name="dob"><br><br>
-
     <label for="favcolor">Favorite Color:</label><br>
     <input type="file" id="favcolor" name="favcolor"><br>
-
     </fieldset>
 
-     <fieldset>
+    <fieldset>
     <legend>Preferences</legend>
-
     <label>Favorite Web Language:</label><br>
     <input type="radio" id="html" name="favlang" value="HTML">
     <label for="html">HTML</label>
@@ -58,5 +51,23 @@
     <br>
 
   </fieldset>
-    
+
+  <fieldset>
+    <legend>Feedback & Settings</legend>
+
+    <label for="feedback">Feedback:</label><br>
+    <input type="text" id="feedback" name="feedback" placeholder="Write your feedback"><br><br>
+    <label for="country">Country Code:</label><br>
+    <input type="text" id="country" name="country" placeholder="ABC"><br><br>
+    <label for="satisfaction">Satisfaction Level:</label><br>
+    <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="75">
+    <br>
+    Value: 75
+    <br><br>
+    <label for="age">Age:</label><br>
+    <input type="number" id="age" name="age" value="30"><br><br>
+    <label for="month">Month Selection:</label><br>
+    <input type="month" id="month" name="month" value="2024-04"><br>
+
+  </fieldset>
   </form>
