Update index.html - buttons added

--- a/index.html
+++ b/index.html
@@ -70,4 +70,9 @@
     <input type="month" id="month" name="month" value="2024-04"><br>
 
   </fieldset>
+
+    <br><br>
+<input type="submit" value="Submit">
+<input type="reset" value="Reset">
+<input type="button" value="Thank you for visiting!">
   </form>
