--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <title> assignment no. 03 </title>
-<body> <font-family;"times"> <text-align;"center">
-<h1> FORM <h1>
-  <form>
+<body> <font-family;"times">
+<h1 align="center"> FORM <h1>
+  <div align="center">
+    <form>
     <fieldset>
     <legend> Personal Information </legend>
     <label for="fname">First Name:</label><br>
@@ -75,4 +76,5 @@
 <input type="submit" value="Submit">
 <input type="reset" value="Reset">
 <input type="button" value="Thank you for visiting!">
-  </form>
+  </div>
+</form>
