Update index.html - change background colors

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <title> assignment no. 03 </title>
-<body> <font-family;"times">
+<body style="background-color: #f2f2f2;"> <font-family;"times">
 <h1 align="center"> FORM <h1>
   <div align="center">
     <form>
-    <fieldset>
+    <fieldset style="background-color: #e6e6fa;">
     <legend> Personal Information </legend>
     <label for="fname">First Name:</label><br>
     <input type="text" id="fname" name="fname" placeholder="First Name"><br><br>
@@ -18,7 +18,7 @@
     <input type="file" id="favcolor" name="favcolor"><br>
     </fieldset>
 
-    <fieldset>
+    <fieldset style="background-color: #dcdcdc;">
     <legend>Preferences</legend>
     <label>Favorite Web Language:</label><br>
     <input type="radio" id="html" name="favlang" value="HTML">
@@ -53,7 +53,7 @@
 
   </fieldset>
 
-  <fieldset>
+  <fieldset style="background-color: #f0f8ff;">
     <legend>Feedback & Settings</legend>
 
     <label for="feedback">Feedback:</label><br>
