Update index.html - heading sizes modified

--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
     <fieldset style="background-color: #e6e6fa;">
     <legend> Personal Information </legend>
       <div style="display:inline-block;">
-    <label for="fname">First Name:</label><br>
+    <label for="fname"><h4> First Name: </h4></label><br>
     <input type="text" id="fname" name="fname" placeholder="First Name"><br><br>
-    <label for="lname">Last Name:</label><br>
+    <label for="lname"><h4>>Last Name:</h4></label><br>
     <input type="text" id="lname" name="lname" placeholder="Last Name"><br><br>
       </div>
       <div style="display:inline-block;">
-    <label for="email">Email:</label><br>
+    <label for="email"><h4>Email:</h4></label><br>
     <input type="email" id="email" name="email" placeholder="Email"><br><br>
-    <label for="dob">Date of Birth:</label><br>
+    <label for="dob"><h4>Date of Birth:</h4></label><br>
     <input type="date" id="dob" name="dob"><br><br>
       </div>
-    <label for="favcolor">Favorite Color:</label><br>
+    <label for="favcolor"><h4>Favorite Color:</h4></label><br>
     <input type="file" id="favcolor" name="favcolor"><br>
     </fieldset>
 
     <fieldset style="background-color: #dcdcdc;">
     <legend>Preferences</legend>
       <div style="display:inline-block;">
-    <label>Favorite Web Language:</label><br>
+    <label><h4>Favorite Web Language:</h4></label><br>
     <input type="radio" id="html" name="favlang" value="HTML">
     <label for="html">HTML</label>
     <input type="radio" id="css" name="favlang" value="CSS">
@@ -34,7 +34,7 @@
     <label for="js">JavaScript</label>
     <br><br>
 
-    <label>Devices You Own:</label><br>
+    <label><h4>Devices You Own:</h4></label><br>
     <input type="checkbox" id="bike" name="device1" value="Bike">
     <label for="bike">Bike</label>
     <input type="checkbox" id="car" name="device2" value="Car">
@@ -45,7 +45,7 @@
       </div>
 
       <div style="display:inline-block;">
-    <label for="carselect">Choose Your Car:</label><br>
+    <label for="carselect"><h4>Choose Your Car:</h4></label><br>
     <select id="carselect" name="carselect" size="4">
       <option value="volvo">Volvo</option>
       <option value="saab">Saab</option>
@@ -54,7 +54,7 @@
     </select>
     <br><br>
 
-    <label for="time">Available Time:</label><br>
+    <label for="time"><h4>Available Time:</h4></label><br>
     <input type="time" id="time" name="time">
     <br>
       </div>
@@ -64,20 +64,21 @@
     <legend>Feedback & Settings</legend>
 
     <div style="display:inline-block;">
-    <label for="feedback">Feedback:</label><br>
+    <label for="feedback"><h4>Feedback:</h4></label><br>
     <input type="text" id="feedback" name="feedback" placeholder="Write your feedback"><br><br>
-    <label for="country">Country Code:</label><br>
+    <label for="country"><h4>Country Code:</h4></label><br>
     <input type="text" id="country" name="country" placeholder="ABC"><br><br>
-    <label for="satisfaction">Satisfaction Level:</label><br>
-    </div>
-    <div style="display:inline-block;">
-    <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="75">
+    <label for="satisfaction"><h4>Satisfaction Level:</h4></label><br>
+      <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="75">
     <br>
     Value: 75
     <br><br>
-    <label for="age">Age:</label><br>
+    </div>
+    
+    <div style="display:inline-block;">
+    <label for="age"><h4>Age:</h4></label><br>
     <input type="number" id="age" name="age" value="30"><br><br>
-    <label for="month">Month Selection:</label><br>
+    <label for="month"><h4>Month Selection:</h4></label><br>
     <input type="month" id="month" name="month" value="2024-04"><br>
     </div>
   </fieldset>
