--- a/index.html
+++ b/index.html
@@ -8,45 +8,45 @@
     <legend> Personal Information </legend>
       <div style="display:inline-block;">
     <label for="fname"><h4> First Name: </h4></label><br>
-    <input type="text" id="fname" name="fname" placeholder="First Name"><br><br>
+    <input type="text" id="fname" name="fname" placeholder="First Name" style="font-size:20px;"><br><br>
     <label for="lname"><h4>>Last Name:</h4></label><br>
-    <input type="text" id="lname" name="lname" placeholder="Last Name"><br><br>
+    <input type="text" id="lname" name="lname" placeholder="Last Name" style="font-size:20px;"><br><br>
       </div>
       <div style="display:inline-block;">
     <label for="email"><h4>Email:</h4></label><br>
-    <input type="email" id="email" name="email" placeholder="Email"><br><br>
+    <input type="email" id="email" name="email" placeholder="Email" style="font-size:20px;"><br><br>
     <label for="dob"><h4>Date of Birth:</h4></label><br>
-    <input type="date" id="dob" name="dob"><br><br>
+    <input type="date" id="dob" name="dob" style="font-size:20px;"><br><br>
       </div>
     <label for="favcolor"><h4>Favorite Color:</h4></label><br>
-    <input type="file" id="favcolor" name="favcolor"><br>
+    <input type="file" id="favcolor" name="favcolor" style="font-size:20px;"><br>
     </fieldset>
 
     <fieldset style="background-color: #dcdcdc;">
     <legend>Preferences</legend>
       <div style="display:inline-block;">
     <label><h4>Favorite Web Language:</h4></label><br>
-    <input type="radio" id="html" name="favlang" value="HTML">
+    <input type="radio" id="html" name="favlang" value="HTML" style="font-size:20px;">
     <label for="html">HTML</label>
-    <input type="radio" id="css" name="favlang" value="CSS">
+    <input type="radio" id="css" name="favlang" value="CSS" style="font-size:20px;">
     <label for="css">CSS</label>
-    <input type="radio" id="js" name="favlang" value="JavaScript">
+    <input type="radio" id="js" name="favlang" value="JavaScript" style="font-size:20px;">
     <label for="js">JavaScript</label>
     <br><br>
 
     <label><h4>Devices You Own:</h4></label><br>
-    <input type="checkbox" id="bike" name="device1" value="Bike">
+    <input type="checkbox" id="bike" name="device1" value="Bike" style="font-size:20px;">
     <label for="bike">Bike</label>
-    <input type="checkbox" id="car" name="device2" value="Car">
+    <input type="checkbox" id="car" name="device2" value="Car" style="font-size:20px;">
     <label for="car">Car</label>
-    <input type="checkbox" id="boat" name="device3" value="Boat">
+    <input type="checkbox" id="boat" name="device3" value="Boat" style="font-size:20px;">
     <label for="boat">Boat</label>
     <br><br>
       </div>
 
       <div style="display:inline-block;">
     <label for="carselect"><h4>Choose Your Car:</h4></label><br>
-    <select id="carselect" name="carselect" size="4">
+    <select id="carselect" name="carselect" size="4" style="font-size:20px;">
       <option value="volvo">Volvo</option>
       <option value="saab">Saab</option>
       <option value="ford">Ford</option>
@@ -55,7 +55,7 @@
     <br><br>
 
     <label for="time"><h4>Available Time:</h4></label><br>
-    <input type="time" id="time" name="time">
+    <input type="time" id="time" name="time" style="font-size:20px;">
     <br>
       </div>
   </fieldset>
@@ -65,11 +65,11 @@
 
     <div style="display:inline-block;">
     <label for="feedback"><h4>Feedback:</h4></label><br>
-    <input type="text" id="feedback" name="feedback" placeholder="Write your feedback"><br><br>
+    <input type="text" id="feedback" name="feedback" placeholder="Write your feedback" style="font-size:20px;"><br><br>
     <label for="country"><h4>Country Code:</h4></label><br>
-    <input type="text" id="country" name="country" placeholder="ABC"><br><br>
+    <input type="text" id="country" name="country" placeholder="ABC" style="font-size:20px;"><br><br>
     <label for="satisfaction"><h4>Satisfaction Level:</h4></label><br>
-      <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="75">
+    <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="75" style="font-size:20px;">
     <br>
     Value: 75
     <br><br>
@@ -77,15 +77,15 @@
     
     <div style="display:inline-block;">
     <label for="age"><h4>Age:</h4></label><br>
-    <input type="number" id="age" name="age" value="30"><br><br>
+    <input type="number" id="age" name="age" value="30" style="font-size:20px;"><br><br>
     <label for="month"><h4>Month Selection:</h4></label><br>
-    <input type="month" id="month" name="month" value="2024-04"><br>
+    <input type="month" id="month" name="month" value="2024-04" style="font-size:20px;"><br>
     </div>
   </fieldset>
 
     <br><br>
-<input type="submit" value="Submit">
-<input type="reset" value="Reset">
-<input type="button" value="Thank you for visiting!">
+<input type="submit" value="Submit" style="font-size:20px;">
+<input type="reset" value="Reset" style="font-size:20px;">
+<input type="button" value="Thank you for visiting!" style="font-size:20px;">
   </div>
 </form>
