--- a/index.html
+++ b/index.html
@@ -6,35 +6,35 @@
     <form>
     <fieldset style="background-color: #e6e6fa;">
     <legend> Personal Information </legend>
-      <div style="display:inline-block;">
-    <label for="fname"><h4> First Name: </h4></label><br>
+      <div style="display:inline-block; font-size:20px;">
+    <label for="fname" style="font-size:30px;"><b>First Name:</b></label><br>
     <input type="text" id="fname" name="fname" placeholder="First Name" style="font-size:20px;"><br><br>
-    <label for="lname"><h4>>Last Name:</h4></label><br>
+    <label for="lname" style="font-size:30px;"><b>Last Name:</b></label><br>
     <input type="text" id="lname" name="lname" placeholder="Last Name" style="font-size:20px;"><br><br>
       </div>
-      <div style="display:inline-block;">
-    <label for="email"><h4>Email:</h4></label><br>
+      <div style="display:inline-block; font-size:20px;">
+    <label for="email" style="font-size:30px;"><h4>Email:</h4></label><br>
     <input type="email" id="email" name="email" placeholder="Email" style="font-size:20px;"><br><br>
-    <label for="dob"><h4>Date of Birth:</h4></label><br>
+    <label for="dob" style="font-size:30px;"><h4>Date of Birth:</h4></label><br>
     <input type="date" id="dob" name="dob" style="font-size:20px;"><br><br>
       </div>
-    <label for="favcolor"><h4>Favorite Color:</h4></label><br>
+    <label for="favcolor" style="font-size:30px;"><h4>Favorite Color:</h4></label><br>
     <input type="file" id="favcolor" name="favcolor" style="font-size:20px;"><br>
     </fieldset>
 
     <fieldset style="background-color: #dcdcdc;">
     <legend>Preferences</legend>
-      <div style="display:inline-block;">
-    <label><h4>Favorite Web Language:</h4></label><br>
-    <input type="radio" id="html" name="favlang" value="HTML" style="font-size:20px;">
-    <label for="html">HTML</label>
-    <input type="radio" id="css" name="favlang" value="CSS" style="font-size:20px;">
-    <label for="css">CSS</label>
-    <input type="radio" id="js" name="favlang" value="JavaScript" style="font-size:20px;">
-    <label for="js">JavaScript</label>
+      <div style="display:inline-block; font-size:20px;">
+    <label style="font-size:30px;"><h4>Favorite Web Language:</h4></label><br>
+    <input type="radio" id="html" name="favlang" value="HTML">
+    <label for="html" style="font-size:20px;">HTML</label>
+    <input type="radio" id="css" name="favlang" value="CSS">
+    <label for="css" style="font-size:20px;">CSS</label>
+    <input type="radio" id="js" name="favlang" value="JavaScript">
+    <label for="js" style="font-size:20px;">JavaScript</label>
     <br><br>
 
-    <label><h4>Devices You Own:</h4></label><br>
+    <label style="font-size:30px;"><h4>Devices You Own:</h4></label><br>
     <input type="checkbox" id="bike" name="device1" value="Bike" style="font-size:20px;">
     <label for="bike">Bike</label>
     <input type="checkbox" id="car" name="device2" value="Car" style="font-size:20px;">
@@ -44,8 +44,8 @@
     <br><br>
       </div>
 
-      <div style="display:inline-block;">
-    <label for="carselect"><h4>Choose Your Car:</h4></label><br>
+      <div style="display:inline-block; font-size:20px;">
+    <label for="carselect" style="font-size:30px;"><h4>Choose Your Car:</h4></label><br>
     <select id="carselect" name="carselect" size="4" style="font-size:20px;">
       <option value="volvo">Volvo</option>
       <option value="saab">Saab</option>
@@ -54,7 +54,7 @@
     </select>
     <br><br>
 
-    <label for="time"><h4>Available Time:</h4></label><br>
+    <label for="time" style="font-size:30px;"><h4>Available Time:</h4></label><br>
     <input type="time" id="time" name="time" style="font-size:20px;">
     <br>
       </div>
@@ -63,19 +63,19 @@
   <fieldset style="background-color: #f0f8ff;">
     <legend>Feedback & Settings</legend>
 
-    <div style="display:inline-block;">
-    <label for="feedback"><h4>Feedback:</h4></label><br>
+    <div style="display:inline-block; font-size:20px;">
+    <label for="feedback" style="font-size:30px;"><h4>Feedback:</h4></label><br>
     <input type="text" id="feedback" name="feedback" placeholder="Write your feedback" style="font-size:20px;"><br><br>
-    <label for="country"><h4>Country Code:</h4></label><br>
+    <label for="country" style="font-size:30px;"><h4>Country Code:</h4></label><br>
     <input type="text" id="country" name="country" placeholder="ABC" style="font-size:20px;"><br><br>
-    <label for="satisfaction"><h4>Satisfaction Level:</h4></label><br>
+    <label for="satisfaction" style="font-size:30px;"><h4>Satisfaction Level:</h4></label><br>
     <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="75" style="font-size:20px;">
     <br>
     Value: 75
     <br><br>
     </div>
     
-    <div style="display:inline-block;">
+    <div style="display:inline-block; font-size:20px;">
     <label for="age"><h4>Age:</h4></label><br>
     <input type="number" id="age" name="age" value="30" style="font-size:20px;"><br><br>
     <label for="month"><h4>Month Selection:</h4></label><br>
