Update index.html - label changes

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <input type="text" id="lname" name="lname" placeholder="Last Name" style="font-size:20px;"><br><br>
       </div>
       <div style="display:inline-block; font-size:20px;">
-    <label for="email" style="font-size:30px;"><h4>Email:</h4></label><br>
+    <label for="email" style="font-size:30px;"><b>Email:</b></label><br>
     <input type="email" id="email" name="email" placeholder="Email" style="font-size:20px;"><br><br>
-    <label for="dob" style="font-size:30px;"><h4>Date of Birth:</h4></label><br>
+    <label for="dob" style="font-size:30px;"><b>Date of Birth:</b></label><br>
     <input type="date" id="dob" name="dob" style="font-size:20px;"><br><br>
       </div>
-    <label for="favcolor" style="font-size:30px;"><h4>Favorite Color:</h4></label><br>
+    <label for="favcolor" style="font-size:30px;"><b>Favorite Color:</b></label><br>
     <input type="file" id="favcolor" name="favcolor" style="font-size:20px;"><br>
     </fieldset>
 
     <fieldset style="background-color: #dcdcdc;">
     <legend>Preferences</legend>
       <div style="display:inline-block; font-size:20px;">
-    <label style="font-size:30px;"><h4>Favorite Web Language:</h4></label><br>
+    <label style="font-size:30px;"><b>Favorite Web Language:</b></label><br>
     <input type="radio" id="html" name="favlang" value="HTML">
     <label for="html" style="font-size:20px;">HTML</label>
     <input type="radio" id="css" name="favlang" value="CSS">
@@ -34,7 +34,7 @@
     <label for="js" style="font-size:20px;">JavaScript</label>
     <br><br>
 
-    <label style="font-size:30px;"><h4>Devices You Own:</h4></label><br>
+    <label style="font-size:30px;"><b>Devices You Own:</b></label><br>
     <input type="checkbox" id="bike" name="device1" value="Bike" style="font-size:20px;">
     <label for="bike">Bike</label>
     <input type="checkbox" id="car" name="device2" value="Car" style="font-size:20px;">
@@ -45,7 +45,7 @@
       </div>
 
       <div style="display:inline-block; font-size:20px;">
-    <label for="carselect" style="font-size:30px;"><h4>Choose Your Car:</h4></label><br>
+    <label for="carselect" style="font-size:30px;"><b>Choose Your Car:</b></label><br>
     <select id="carselect" name="carselect" size="4" style="font-size:20px;">
       <option value="volvo">Volvo</option>
       <option value="saab">Saab</option>
@@ -54,7 +54,7 @@
     </select>
     <br><br>
 
-    <label for="time" style="font-size:30px;"><h4>Available Time:</h4></label><br>
+    <label for="time" style="font-size:30px;"><b>Available Time:</b></label><br>
     <input type="time" id="time" name="time" style="font-size:20px;">
     <br>
       </div>
@@ -64,11 +64,11 @@
     <legend>Feedback & Settings</legend>
 
     <div style="display:inline-block; font-size:20px;">
-    <label for="feedback" style="font-size:30px;"><h4>Feedback:</h4></label><br>
+    <label for="feedback" style="font-size:30px;"><b>Feedback:</b></label><br>
     <input type="text" id="feedback" name="feedback" placeholder="Write your feedback" style="font-size:20px;"><br><br>
-    <label for="country" style="font-size:30px;"><h4>Country Code:</h4></label><br>
+    <label for="country" style="font-size:30px;"><b>Country Code:</b></label><br>
     <input type="text" id="country" name="country" placeholder="ABC" style="font-size:20px;"><br><br>
-    <label for="satisfaction" style="font-size:30px;"><h4>Satisfaction Level:</h4></label><br>
+    <label for="satisfaction" style="font-size:30px;"><b>Satisfaction Level:</b></label><br>
     <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="75" style="font-size:20px;">
     <br>
     Value: 75
@@ -76,9 +76,9 @@
     </div>
     
     <div style="display:inline-block; font-size:20px;">
-    <label for="age"><h4>Age:</h4></label><br>
+    <label for="age"><b>Age:</b></label><br>
     <input type="number" id="age" name="age" value="30" style="font-size:20px;"><br><br>
-    <label for="month"><h4>Month Selection:</h4></label><br>
+    <label for="month"><b>Month Selection:</b></label><br>
     <input type="month" id="month" name="month" value="2024-04" style="font-size:20px;"><br>
     </div>
   </fieldset>
