Update index.html - slider changes 2

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 <br>
 Value: <span id="sliderValue">75</span>
 <br><br>
+      <script>
+function updateValue(val) {
+  document.getElementById('sliderValue').innerText = val;
+}
+</script>
     </div>
     
     <div style="display:inline-block; font-size:20px;">
