--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <title> assignment no. 03 </title>
 <body style="background-color: #f2f2f2;"> <font-family;"times">
-<h1 align="center" style="font-size:50px;"> FORM <h1>
-  <div align="center">
+<h1 align="left" style="font-size:50px;"> FORM <h1>
+  <div align="left">
     <form>
     <fieldset style="background-color: #e6e6fa;">
     <legend> Personal Information </legend>
