--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1 align="left" style="font-size:50px;"> FORM <h1>
   <div align="left">
     <form>
-    <fieldset>
+    <fieldset style="background-color: #ffffff;">
     <legend> Personal Information </legend>
       <div style="display:inline-block; font-size:20px;">
     <label for="fname" style="font-size:30px;"><b>First Name:</b></label><br>
@@ -22,7 +22,7 @@
     <input type="file" id="favcolor" name="favcolor" style="font-size:20px;"><br>
     </fieldset>
 
-    <fieldset>
+    <fieldset style="background-color: #ffffff;">
     <legend>Preferences</legend>
       <div style="display:inline-block; font-size:20px;">
     <label style="font-size:30px;"><b>Favorite Web Language:</b></label><br>
@@ -60,7 +60,7 @@
       </div>
   </fieldset>
 
-  <fieldset>
+  <fieldset style="background-color: #ffffff;">
     <legend>Feedback & Settings</legend>
 
     <div style="display:inline-block; font-size:20px;">
