Update index.html - minute changes in font size

--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 <html>
 <title> assignment no. 03 </title>
-<body style="background-color: #f2f2f2;"> <font-family;"times">
-<h1 align="left" style="font-size:50px;"> FORM <h1>
+<body style="background-color: #f2f2f2;"> <font-family;"monsterrat">
+<h1 align="left" style="font-size:30px;"> FORM <h1>
   <div align="left">
     <form>
     <fieldset style="background-color: #ffffff;">
     <legend> Personal Information </legend>
-      <div style="display:inline-block; font-size:20px;">
-    <label for="fname" style="font-size:30px;"><b>First Name:</b></label><br>
-    <input type="text" id="fname" name="fname" placeholder="First Name" style="font-size:20px;"><br><br>
-    <label for="lname" style="font-size:30px;"><b>Last Name:</b></label><br>
-    <input type="text" id="lname" name="lname" placeholder="Last Name" style="font-size:20px;"><br><br>
+      <div style="display:inline-block;">
+    <label for="fname" style="font-size:20px;"><b>First Name:</b></label><br>
+    <input type="text" id="fname" name="fname" placeholder="First Name" style="font-size:10px;"><br><br>
+    <label for="lname" style="font-size:20px;"><b>Last Name:</b></label><br>
+    <input type="text" id="lname" name="lname" placeholder="Last Name" style="font-size:10px;"><br><br>
       </div>
-      <div style="display:inline-block; font-size:20px;">
-    <label for="email" style="font-size:30px;"><b>Email:</b></label><br>
-    <input type="email" id="email" name="email" placeholder="Email" style="font-size:20px;"><br><br>
-    <label for="dob" style="font-size:30px;"><b>Date of Birth:</b></label><br>
-    <input type="date" id="dob" name="dob" style="font-size:20px;"><br><br>
+      <div style="display:inline-block;">
+    <label for="email" style="font-size:20px;"><b>Email:</b></label><br>
+    <input type="email" id="email" name="email" placeholder="Email" style="font-size:10px;"><br><br>
+    <label for="dob" style="font-size:20px;"><b>Date of Birth:</b></label><br>
+    <input type="date" id="dob" name="dob" style="font-size:10px;"><br><br>
       </div>
-    <label for="favcolor" style="font-size:30px;"><b>Favorite Color:</b></label><br>
-    <input type="file" id="favcolor" name="favcolor" style="font-size:20px;"><br>
+    <label for="favcolor" style="font-size:20px;"><b>Favorite Color:</b></label><br>
+    <input type="file" id="favcolor" name="favcolor" style="font-size:10px;"><br>
     </fieldset>
 
     <fieldset style="background-color: #ffffff;">
     <legend>Preferences</legend>
-      <div style="display:inline-block; font-size:20px;">
-    <label style="font-size:30px;"><b>Favorite Web Language:</b></label><br>
+      <div style="display:inline-block; font-size:10px;">
+    <label style="font-size:20px;"><b>Favorite Web Language:</b></label><br>
     <input type="radio" id="html" name="favlang" value="HTML">
-    <label for="html" style="font-size:20px;">HTML</label>
+    <label for="html" style="font-size:15px;">HTML</label>
     <input type="radio" id="css" name="favlang" value="CSS">
-    <label for="css" style="font-size:20px;">CSS</label>
+    <label for="css" style="font-size:15px;">CSS</label>
     <input type="radio" id="js" name="favlang" value="JavaScript">
-    <label for="js" style="font-size:20px;">JavaScript</label>
+    <label for="js" style="font-size:15px;">JavaScript</label>
     <br><br>
 
-    <label style="font-size:30px;"><b>Devices You Own:</b></label><br>
-    <input type="checkbox" id="bike" name="device1" value="Bike" style="font-size:20px;">
+    <label style="font-size:20px;"><b>Devices You Own:</b></label><br>
+    <input type="checkbox" id="bike" name="device1" value="Bike" style="font-size:10px;">
     <label for="bike">Bike</label>
-    <input type="checkbox" id="car" name="device2" value="Car" style="font-size:20px;">
+    <input type="checkbox" id="car" name="device2" value="Car" style="font-size:10px;">
     <label for="car">Car</label>
-    <input type="checkbox" id="boat" name="device3" value="Boat" style="font-size:20px;">
+    <input type="checkbox" id="boat" name="device3" value="Boat" style="font-size:10px;">
     <label for="boat">Boat</label>
     <br><br>
       </div>
 
-      <div style="display:inline-block; font-size:20px;">
-    <label for="carselect" style="font-size:30px;"><b>Choose Your Car:</b></label><br>
-    <select id="carselect" name="carselect" size="4" style="font-size:20px;">
+      <div style="display:inline-block;">
+    <label for="carselect" style="font-size:20px;"><b>Choose Your Car:</b></label><br>
+    <select id="carselect" name="carselect" size="4" style="font-size:15px;">
       <option value="volvo">Volvo</option>
       <option value="saab">Saab</option>
       <option value="ford">Ford</option>
@@ -54,8 +54,8 @@
     </select>
     <br><br>
 
-    <label for="time" style="font-size:30px;"><b>Available Time:</b></label><br>
-    <input type="time" id="time" name="time" style="font-size:20px;">
+    <label for="time" style="font-size:20px;"><b>Available Time:</b></label><br>
+    <input type="time" id="time" name="time" style="font-size:10px;">
     <br>
       </div>
   </fieldset>
@@ -63,12 +63,12 @@
   <fieldset style="background-color: #ffffff;">
     <legend>Feedback & Settings</legend>
 
-    <div style="display:inline-block; font-size:20px;">
-    <label for="feedback" style="font-size:30px;"><b>Feedback:</b></label><br>
-    <input type="text" id="feedback" name="feedback" placeholder="Write your feedback" style="font-size:20px;"><br><br>
-    <label for="country" style="font-size:30px;"><b>Country Code:</b></label><br>
-    <input type="text" id="country" name="country" placeholder="ABC" style="font-size:20px;"><br><br>
-    <label for="satisfaction" style="font-size:30px;"><b>Satisfaction Level:</b></label><br>
+    <div style="display:inline-block;">
+    <label for="feedback" style="font-size:20px;"><b>Feedback:</b></label><br>
+    <input type="text" id="feedback" name="feedback" placeholder="Write your feedback" style="font-size:10px;"><br><br>
+    <label for="country" style="font-size:20px;"><b>Country Code:</b></label><br>
+    <input type="text" id="country" name="country" placeholder="ABC" style="font-size:10px;"><br><br>
+    <label for="satisfaction" style="font-size:20px;"><b>Satisfaction Level:</b></label><br>
       <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="75" oninput="updateValue(this.value)">
 <br>
 Value: <span id="sliderValue">75</span>
@@ -82,9 +82,9 @@ function updateValue(val) {
     
     <div style="display:inline-block; font-size:20px;">
     <label for="age"><b>Age:</b></label><br>
-    <input type="number" id="age" name="age" value="30" style="font-size:20px;"><br><br>
+    <input type="number" id="age" name="age" value="30" style="font-size:10px;"><br><br>
     <label for="month"><b>Month Selection:</b></label><br>
-    <input type="month" id="month" name="month" value="2024-04" style="font-size:20px;"><br>
+    <input type="month" id="month" name="month" value="2024-04" style="font-size:10px;"><br>
     </div>
   </fieldset>
 
