--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <label for="satisfaction" style="font-size:20px;"><b>Satisfaction Level:</b></label><br>
       <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="75" oninput="updateValue(this.value)">
 <br>
+      <style="font-size:10px;"
 Value: <span id="sliderValue">75</span>
 <br><br>
       <script>
