Update index.html - slider changes

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     <label for="country" style="font-size:20px;"><b>Country Code:</b></label><br>
     <input type="text" id="country" name="country" placeholder="ABC" style="font-size:10px;"><br><br>
     <label for="satisfaction" style="font-size:20px;"><b>Satisfaction Level:</b></label><br>
-      <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="75" oninput="updateValue(this.value)">
+      <input type="range" id="satisfaction" name="satisfaction" min="0" max="100" value="10" oninput="updateValue(this.value)">
 <br>
-      <style="font-size:10px;"
-Value: <span id="sliderValue">75</span>
+      <style="font-size:10px;">
+        <span id="sliderValue">10</span>
 <br><br>
       <script>
 function updateValue(val) {
