Update index.html - final

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ function updateValue(val) {
 }
 </script>
     
-    <label for="age" style="font-size:20px; background-color="blue";"><b>Age:</b></label><br>
+    <label for="age" style="font-size:20px;"><b>Age:</b></label><br>
     <input type="number" id="age" name="age" value="30" style="font-size:10px;"><br><br>
     <label for="month" style="font-size:20px;"><b>Month Selection:</b></label><br>
     <input type="month" id="month" name="month" value="2024-04" style="font-size:10px;"><br>
